basic startups dash working

--- a/app/views/people/people.list.html
+++ b/app/views/people/people.list.html
@@ -1,6 +1,7 @@
 <div class="col-md-12 dash-table">
     <div ng-init="roles = global.findKey(item.value.communities, 'roles')">
-        <a ui-sref="user.profile({user: global.user})" title="View {{::item.value.profile.name | words:0}}'s Profile"><img ng-src="{{item.value.profile.linkedin.pictureUrl || item.value.profile.avatar || 'images/blank_avatar.png'}}" alt="{{::item.value.profile.name}}" class="user-img widget-image img-circle pull-left"/></a>
+        <a ui-sref="user.profile({user: item})" title="View {{::item.value.profile.name | words:0}}'s Profile"><img
+                ng-src="{{item.value.profile.linkedin.pictureUrl || item.value.profile.avatar || 'images/blank_avatar.png'}}" alt="{{::item.value.profile.name}}" class="user-img widget-image img-circle pull-left"/></a>
     </div>
     <div class="user-row">
         <a ui-sref="user.profile({user: item})" title="View {{::item.value.profile.name | words:0}}'s Profile" style="float: left; "><strong>{{::item.value.profile.name}} </strong></a>
