startup profile working

--- a/app/views/people/people.profile.html
+++ b/app/views/people/people.profile.html
@@ -1,4 +1,4 @@
-<div class="row" ng-controller="ProfileController">
+<div class="row" ng-controller="PeopleProfileController">
     <div class="col-lg-12">
         <div class="hpanel hgreen">
             <div class="panel-body">
