--- a/app/views/startups/startups.profile.html
+++ b/app/views/startups/startups.profile.html
@@ -1,24 +1,24 @@
-<div class="row" ng-controller="ProfileController">
+<div class="row" ng-controller="StartupProfileController">
     <div class="col-lg-12">
         <div class="hpanel hgreen">
             <div class="panel-body">
                 <div class="row">
                     <div class="col-sm-9">
                         <div class="col-sm-2 col-lg-1">
-                            <img class="img-circle m-b" style="height:75px;" ng-src="{{$state.params.user.profile.avatar || $state.params.user.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}" alt="{{::$state.params.user.profile.name}}">
+                            <img class="img-circle m-b" style="height:75px;" ng-src="{{$state.params.startup.thumb_url}}" alt="{{::$state.params.startup.name}}">
                         </div>
                         <div class="col-sm-10 col-lg-11" style="padding-bottom: 15px;">
                             <div class="project-action" style="margin-right: -15px;">
                                 <div class="btn-group pull-right">
-                                    <a href="#"><i class="fa fa-twitter btn btn-default btn-xs"></i></a>
-                                    <a href="{{$state.params.user.profile.linkedin.publicProfileUrl}}" target="_blank"><i class="fa fa-linkedin btn btn-default btn-xs"></i>
+                                    <a href="{{$state.params.startup.twitter_url}}"><i class="fa fa-twitter btn btn-default btn-xs"></i></a>
+                                    <a href="{{$state.params.startup.angellist_url}}" target="_blank"><i class="fa fa-angellist btn btn-default btn-xs"></i>
                                     </a>
                                 </div>
                             </div>
-                            <h3>{{::$state.params.user.profile.name | words:0}} {{::$state.params.user.profile.name | words:1}} {{::$state.params.user.profile.name | words:2}}
+                            <h3>{{::$state.params.startup.name}}
                             </h3>
                             <h4>
-                                {{::$state.params.user.profile.linkedin.headline}}
+                                {{::$state.params.startup.high_concept}}
                             </h4>
                         </div>
 
@@ -69,9 +69,7 @@
             </div>
             <div class="panel-footer">
                 <h3>Summary</h3>
-                <p style="white-space:pre-wrap;" ng-bind-html="::$state.params.user.profile.linkedin.summary | linky:'_blank'"></p>
-                <h3 ng-show="$state.params.user.skills">Skills</h3>
-                <li ng-repeat="skill in $state.params.user.skills" class="label btn-info" style="margin-right: 3px; margin-top: 3px; float:left; padding-bottom: 5px;">{{::skill.name}}</li>
+                <p style="white-space:pre-wrap;" ng-bind-html="::$state.params.startup.product_desc | linky:'_blank'"></p>
             </div>
         </div>
     </div>
