profile icons are good

--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1,5 +1,19 @@
 /* Custom */
 
+.user-role {
+  padding-left: 5px;
+}
+
+.user-role i {
+   text-size: 16px;
+   opacity: .5;
+ }
+
+
+.user-role i:hover {
+  opacity: 1;
+}
+
 .skills {
   margin-right: 3px;
   margin-top: 3px;
