added profile url not working

--- a/app/views/common/header.html
+++ b/app/views/common/header.html
@@ -45,12 +45,17 @@
     <div class="navbar-right hidden-xs">
         <ul class="nav navbar-nav no-borders">
             <li class="dropdown">
+                <a tooltip-placement="left" tooltip="Search">
+                    <i class="pe-7s-search"></i>
+                </a>
+            </li>
+            <li class="dropdown">
                 <a tooltip-placement="left" tooltip="Help">
                     <i class="pe-7s-help1"></i>
                 </a>
             </li>
             <li class="dropdown">
-                <a tooltip-placement="bottom" tooltip="Sign Out" ng-click="global.logout()" style="padding-right: 30px;">
+                <a tooltip-placement="left" tooltip="Sign Out" ng-click="global.logout()" style="padding-right: 30px;">
                     <i class="pe-7s-upload pe-rotate-90"></i>
                 </a>
             </li>
