--- a/app/less/various.less
+++ b/app/less/various.less
@@ -861,7 +861,7 @@ a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.acti
 
 .normalheader {
   min-width: 320px;
-  padding: 40px 40px 0px 40px;
+  padding: 25px;
 }
 
 @media(max-width: 768px) {
