--- a/app/views/locations/location.dashboard.html
+++ b/app/views/locations/location.dashboard.html
@@ -11,34 +11,57 @@
                     </div>
                     <div class="m-t-xl">
                         <h1 class="text-info">184</h1>
-                        <hr>
                     </div>
-
-                    <ul class="panel-list" style="margin-left: -5px; margin-top: -10px;">
-
-                        <li>
-                            <a href="javascript:void(0)">
-                                <i class="fa fa-rocket text-navyblue"></i> Founders
-                            </a>
-                        </li>
-                        <li>
-                            <a href="javascript:void(0)">
-                                <i class="fa fa-flag text-danger"></i> Leaders
-                            </a>
-                        </li>
-                        <li>
-                            <a href="javascript:void(0)">
-                                <i class="fa fa-graduation-cap text-info"></i> Advisors
-                            </a>
-                        </li>
-                        <li>
-                            <a href="javascript:void(0)">
-                                <i class="fa fa-leaf text-success"></i> Investors
-                            </a>
-                        </li>
-                    </ul>
-
-
+                </div>
+                <div class="panel-footer contact-footer">
+                    <div class="row">
+                        <div class="col-md-6 border-right animated-panel">
+                            <div class="stats-title pull-left">
+                                <h6>Founders</h6>
+                            </div>
+                            <div class="stats-icon pull-right" style="margin-top: 10px;">
+                                <i class="fa fa-rocket text-primary fa-2x" style="opacity: .5;"></i>
+                            </div>
+                            <div style="margin-top:23px;">
+                                <h3 class="text-info">184</h3>
+                            </div>
+                        </div>
+                        <div class="col-md-6 border-right animated-panel">
+                            <div class="stats-title pull-left">
+                                <h6>Leaders</h6>
+                            </div>
+                            <div class="stats-icon pull-right" style="margin-top: 10px; margin-right: 5px;">
+                                <i class="fa fa-flag text-danger fa-2x" style="opacity: .5;"></i>
+                            </div>
+                            <div style="margin-top:23px;">
+                                <h3 class="text-info">184</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 border-right animated-panel">
+                            <div class="stats-title pull-left">
+                                <h6>Investors</h6>
+                            </div>
+                            <div class="stats-icon pull-right" style="margin-top: 10px;">
+                                <i class="fa fa-leaf text-success fa-2x" style="opacity: .5;"></i>
+                            </div>
+                            <div style="margin-top:23px;">
+                                <h3 class="text-info">184</h3>
+                            </div>
+                        </div>
+                        <div class="col-md-6 border-right animated-panel">
+                            <div class="stats-title pull-left">
+                                <h6>Advisors</h6>
+                            </div>
+                            <div class="stats-icon pull-right" style="margin-top: 10px;">
+                                <i class="fa fa-graduation-cap text-info fa-2x" style="opacity: .5;"></i>
+                            </div>
+                            <div style="margin-top:23px;">
+                                <h3 class="text-info">184</h3>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -56,6 +79,7 @@
                         <hr>
                     </div>
                 </div>
+
             </div>
         </div>
         <div class="col-md-4">
