reworked page title to use params

--- a/app/less/layout.less
+++ b/app/less/layout.less
@@ -20,7 +20,8 @@ body {
   background: url('../images/office_table_wash.jpg') no-repeat center center fixed;
   margin-left: 0px !important;
   height: 100%;
-  position: relative;
+  width: 100%;
+  position: absolute;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
