--- a/app/views/locations/location.dashboard.html
+++ b/app/views/locations/location.dashboard.html
@@ -1,7 +1,7 @@
-<div animate-panel effect="fadeInRight" ng-controller="LocationController">
+<div ng-controller="LocationController">
     <div class="row">
         <div class="col-md-4">
-            <div class="hpanel hblue">
+            <div class="hpanel hblue" >
                 <div class="panel-body">
                     <div class="stats-title pull-left">
                         <h4>People</h4>
@@ -15,50 +15,50 @@
                 </div>
                 <div class="panel-footer contact-footer">
                     <div class="row">
-                        <div class="col-md-6 border-right animated-panel">
+                        <div class="col-md-6 border-right">
                             <div class="stats-title pull-left">
                                 <h6>Founders</h6>
                             </div>
-                            <div class="stats-icon pull-right" style="margin-top: 10px;">
-                                <i class="fa fa-rocket text-primary fa-2x" style="opacity: .5;"></i>
+                            <div class="stats-icon pull-right">
+                                <i class="fa fa-rocket text-primary" style="opacity: .5;"></i>
                             </div>
                             <div style="margin-top:23px;">
-                                <h3 class="text-info">184</h3>
+                                <h3 class="text-info">32</h3>
                             </div>
                         </div>
-                        <div class="col-md-6 border-right animated-panel">
+                        <div class="col-md-6">
                             <div class="stats-title pull-left">
                                 <h6>Leaders</h6>
                             </div>
-                            <div class="stats-icon pull-right" style="margin-top: 10px; margin-right: 5px;">
-                                <i class="fa fa-flag text-danger fa-2x" style="opacity: .5;"></i>
+                            <div class="stats-icon pull-right" style="margin-right: 3px;">
+                                <i class="fa fa-flag text-danger" style="opacity: .5;"></i>
                             </div>
                             <div style="margin-top:23px;">
-                                <h3 class="text-info">184</h3>
+                                <h3 class="text-info">9</h3>
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6 border-right animated-panel">
+                        <div class="col-md-6 border-right">
                             <div class="stats-title pull-left">
                                 <h6>Investors</h6>
                             </div>
-                            <div class="stats-icon pull-right" style="margin-top: 10px;">
-                                <i class="fa fa-leaf text-success fa-2x" style="opacity: .5;"></i>
+                            <div class="stats-icon pull-right">
+                                <i class="fa fa-leaf text-success" style="opacity: .5;"></i>
                             </div>
                             <div style="margin-top:23px;">
-                                <h3 class="text-info">184</h3>
+                                <h3 class="text-info">27</h3>
                             </div>
                         </div>
-                        <div class="col-md-6 border-right animated-panel">
+                        <div class="col-md-6">
                             <div class="stats-title pull-left">
                                 <h6>Advisors</h6>
                             </div>
-                            <div class="stats-icon pull-right" style="margin-top: 10px;">
-                                <i class="fa fa-graduation-cap text-info fa-2x" style="opacity: .5;"></i>
+                            <div class="stats-icon pull-right">
+                                <i class="fa fa-graduation-cap text-info" style="opacity: .5;"></i>
                             </div>
                             <div style="margin-top:23px;">
-                                <h3 class="text-info">184</h3>
+                                <h3 class="text-info">125</h3>
                             </div>
                         </div>
                     </div>
@@ -76,7 +76,56 @@
                     </div>
                     <div class="m-t-xl">
                         <h1 class="text-success">79</h1>
-                        <hr>
+                    </div>
+                </div>
+                <div class="panel-footer contact-footer">
+                    <div class="row">
+                        <div class="col-md-6 border-right">
+                            <div class="stats-title pull-left">
+                                <h6>Bootstrap</h6>
+                            </div>
+                            <div class="stats-icon pull-right">
+                                <small class="text-muted">1 - 2</small>
+                            </div>
+                            <div style="margin-top:23px;">
+                                <h3 class="text-info">37</h3>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="stats-title pull-left">
+                                <h6>Validation</h6>
+                            </div>
+                            <div class="stats-icon pull-right">
+                                <small class="text-muted">3 - 10</small>
+                            </div>
+                            <div style="margin-top:23px;">
+                                <h3 class="text-info">31</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 border-right">
+                            <div class="stats-title pull-left">
+                                <h6>Growth</h6>
+                            </div>
+                            <div class="stats-icon pull-right">
+                                <small class="text-muted">11 - 100</small>
+                            </div>
+                            <div style="margin-top:23px;">
+                                <h3 class="text-info">18</h3>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="stats-title pull-left">
+                                <h6>Scale</h6>
+                            </div>
+                            <div class="stats-icon pull-right">
+                                <small class="text-muted">100+</small>
+                            </div>
+                            <div style="margin-top:23px;">
+                                <h3 class="text-info">6</h3>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
