--- a/app/views/people/people.dashboard.html
+++ b/app/views/people/people.dashboard.html
@@ -1,6 +1,6 @@
-<div ng-controller="PeopleController" animate-panel effect="zoomIn">
+<div ng-controller="PeopleController">
     <div class="row">
-        <div class="col-md-4 animated-panel zoomIn">
+        <div class="col-md-4">
         <!-- Navigation Block -->
             <div class="hpanel hgreen">
                 <div class="panel-footer top" style="font-size: 17px;">
@@ -42,7 +42,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4 animated-panel zoomIn">
+        <div class="col-md-4">
             <div class="hpanel hnavyblue">
                 <div class="panel-footer top" style="font-size: 17px;">
                     <strong>Cluster</strong> Filters
@@ -63,7 +63,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4 animated-panel zoomIn">
+        <div class="col-md-4">
             <div class="hpanel hblue">
                 <div class="panel-footer top" style="font-size: 17px;">
                     <strong>Network</strong> Filters
