--- a/app/views/common/content_small.html
+++ b/app/views/common/content_small.html
@@ -20,7 +20,7 @@
                     </ol>
                 </div>
                 <h2 class="font-light m-b-xs">
-                    {{ $state.params.pageTitle }}
+                    {{ $state.params.community.profile.name }}
                 </h2>
             </div>
         </div>
